--- a/models/deploy/marketplace/slack/slack_utils__slack_utils.yml
+++ b/models/deploy/marketplace/slack/slack_utils__slack_utils.yml
@@ -4,7 +4,7 @@ models:
     columns:
       - name: post_webhook
         tests:
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__post_webhook_httpbin
               args: >
                 'https://httpbin.org/post',
@@ -13,7 +13,7 @@ models:
                 - result:status_code = 200
                 - result:data.json.text = 'Test message from Livequery'
                 - result IS NOT NULL
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__post_webhook_invalid_url
               args: >
                 'https://httpbin.org/status/404',
@@ -21,7 +21,7 @@ models:
               assertions:
                 - result:status_code = 404
                 - result IS NOT NULL
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__post_webhook_null_payload
               args: >
                 'https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX',
@@ -32,7 +32,7 @@ models:
 
       - name: post_message
         tests:
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__post_message_httpbin
               args: >
                 'fake-test-token',
@@ -42,7 +42,7 @@ models:
                 - result:status_code = 200
                 - result:data.json.text = 'Test message from Livequery'
                 - result IS NOT NULL
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__post_message_auth_error
               args: >
                 'invalid-token',
@@ -54,7 +54,7 @@ models:
 
       - name: post_reply
         tests:
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__post_reply_httpbin
               args: >
                 'fake-test-token',
@@ -68,13 +68,13 @@ models:
 
       - name: validate_webhook_url
         tests:
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_webhook_url_valid
               args: >
                 'https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX'
               assertions:
                 - result = true
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_webhook_url_invalid
               args: >
                 'https://invalid-url.com/webhook'
@@ -84,43 +84,43 @@ models:
 
       - name: validate_channel
         tests:
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_channel_id
               args: >
                 'C1234567890'
               assertions:
                 - result = true
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_channel_name
               args: >
                 '#general'
               assertions:
                 - result = true
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_channel_dm
               args: >
                 'D1234567890'
               assertions:
                 - result = true
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_channel_group
               args: >
                 'G1234567890'
               assertions:
                 - result = true
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_channel_invalid
               args: >
                 'invalid-channel'
               assertions:
                 - result = false
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_channel_null
               args: >
                 NULL
               assertions:
                 - result = false
-          - test_udf:
+          - test_udf_without_context:
               name: test_slack_utils__validate_channel_empty
               args: >
                 ''
